<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="label_main_activity">My Nanodegree Apps!</string>

    <string name="label_button_spotify_streamer">Spotify Streamer</string>
    <string name="label_button_scores_app">Scores App</string>
    <string name="label_button_library_app">Library App</string>
    <string name="label_button_build_it_bigger">Build It Bigger</string>
    <string name="label_button_xyz_reader">XYZ Reader</string>
    <string name="label_button_capstone_my_own_app">Capstone My Own App</string>

    <!-- Toast messages -->
    <string name="toast_spotfiy_streamer">This button will launch my spotify streamer!</string>
    <string name="toast_scores_app">This button will launch my scores app!</string>
    <string name="toast_library_app">This button will launch my library app!</string>
    <string name="toast_build_it_bigger">This button will launch my build it bigger app!</string>
    <string name="toast_xyz_reader">This button will launch my xyz reader!</string>
    <string name="toast_capstone_my_own_app">This button will launch my capstone own app!</string>
    <string name="toast_settings">This is settings!</string>


</resources>
