<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/label_main_activity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <Button android:id="@+id/button_spotify_streamer"
        style="@style/button_text"
        android:background="@drawable/button_background_color"
        android:text="@string/label_button_spotify_streamer"
        android:textColor="@drawable/button_text_color"/>

    <Button android:id="@+id/button_scores_app"
        style="@style/button_text"
        android:background="@drawable/button_background_color"
        android:text="@string/label_button_scores_app"
        android:textColor="@drawable/button_text_color"/>

    <Button android:id="@+id/button_library_app"
        style="@style/button_text"
        android:background="@drawable/button_background_color"
        android:text="@string/label_button_library_app"
        android:textColor="@drawable/button_text_color"/>

    <Button android:id="@+id/button_build_it_bigger"
        style="@style/button_text"
        android:background="@drawable/button_background_color"
        android:text="@string/label_button_build_it_bigger"
        android:textColor="@drawable/button_text_color"/>

    <Button android:id="@+id/button_xyz_reader"
        style="@style/button_text"
        android:background="@drawable/button_background_color"
        android:text="@string/label_button_xyz_reader"
        android:textColor="@drawable/button_text_color"/>

    <Button android:id="@+id/button_capstone_my_own_app"
        style="@style/button_text"
        android:background="@drawable/button_background_color"
        android:text="@string/label_button_capstone_my_own_app"
        android:textColor="@drawable/button_text_color"/>

</LinearLayout>
